Fixed detail photo slider images alignment

--- a/assets/css/styleDetail.css
+++ b/assets/css/styleDetail.css
@@ -987,8 +987,7 @@ section .container {
     padding-top: 20px;
   }
   .swiper-slide img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
     position: relative;
   }
 }
